crates/usfm_usx/tests/snapshots/reader__usx_unknown_element__misplaced.snap
---
source: crates/usfm_usx/tests/reader.rs
description: "<usx version=\"3.0\"><book code=\"GEN\" style=\"id\"/><chapter number=\"1\" style=\"c\" sid=\"GEN 1\"/><para style=\"p\">text <para style=\"q1\">nested</para> more</para><chapter eid=\"GEN 1\"/></usx>"
---
Book GEN "" @19..48
Para usfm@5..18
  Text "3.0"@14..17
ChapterStart 1@48..91
Para p@91..154
  Text "text nested more"@107..147
ChapterEnd 1
--- diagnostics
warning[usx-unknown-element] @112..142: `<para>` cannot stand inside inline content; its content is read in its place
